--- a/index.html
+++ b/index.html
@@ -1,9 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
   <title>AS Test site</title>
+  <meta charset="utf-8">
+  <link href="style.css" rel="stylesheet" />
+  <script src="logic.js"></script>
 </head>
+
 <body>
+  <div id="wrapper">
+    <div class="overlay"></div>
+    
+    <!-- Sidebar -->
+    <nav class="navbar navbar-inverse fixed-top" id="sidebar-wrapper" role="navigation">
+      <ul class="nav sidebar-nav">
+        <div class="sidebar-header">
+        <div class="sidebar-brand">
+          <a href="#">AerialSphere</a>
+        </div></div>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#viewer">Viewer</a></li>
+      </ul>
+    </nav>
+    <!-- /#sidebar-wrapper -->
+
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+      <button type="button" class="hamburger animated fadeInLeft is-closed" data-toggle="offcanvas">
+        <span class="hamb-top"></span>
+        <span class="hamb-middle"></span>
+        <span class="hamb-bottom"></span>
+      </button>
+      <div class="container">
+        <div id="home" class="row">
+          <div class="col-lg-8 col-lg-offset-2">
+            <h2>Demo home page</h2>
+            <p>This page is currently here just to navigate back to</p>                         
+          </div>
+        </div>
+        <div id="viewer" class="row">
+          <div class="col-lg-8 col-lg-offset-2">
+            <h2>Demo viewer page</h2>
+            <p>TODO: Add the viewer</p>                         
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /#page-content-wrapper -->
+
+  </div>
+  <!-- /#wrapper -->
 </body>
 </html>
